# piaic71-hackathon

hackathon2-sdd/: .gitignore  00notes.txt  AGENTS.md  main.py  pyproject.toml
hackathon2-sdd-b/: .cli_state.json  .env.example  .gitignore  AGENTS.md  pyproject.toml  requirements.txt
hackathon2-sdd-b/.codex/: auth.json  config.toml  history.jsonl  version.json
hackathon2-sdd-b/.codex/policy/: default.codexpolicy
hackathon2-sdd-b/.specify/memory/: constitution.md
hackathon2-sdd-b/.specify/templates/: plan-template.md  tasks-template.md
hackathon2-sdd-b/agents/: architect.agent.md  backend.agent.md  devops.agent.md  frontend.agent.md  specs.agent.md
hackathon2-sdd-b/backend/: auth.py  db.py  main.py  models.py  schemas.py
hackathon2-sdd-b/backend/routes/: tasks.py
hackathon2-sdd-b/frontend/: README.md  package.json  tsconfig.json
hackathon2-sdd-b/frontend/app/: README.md  layout.tsx
hackathon2-sdd-b/frontend/components/: TaskForm.tsx  TaskItem.tsx  TaskList.tsx
hackathon2-sdd-b/frontend/lib/: api.ts  auth.ts
hackathon2-sdd-b/specs/: specify.md
hackathon2-sdd-b/specs/001-interactive-cli-ux/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
hackathon2-sdd-b/specs/001-spec-meta/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
hackathon2-sdd-b/specs/002-phase2/: architecture.md  data-model.md  overview.md  plan.md  quickstart.md  research.md  specify.md  tasks.md
hackathon2-sdd-b/src/cli/: __init__.py  app.py  errors.py  (+3 more)
hackathon2-sdd-b/tests/: conftest.py
hackathon2-sdd/tests/: conftest.py
(+120 files in other folders)
