[project]
name = "hackathon2-sdd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "mypy>=1.10",
]

[tool.pytest.ini_options]
addopts = "--cov=src --cov=tests --cov-report=term-missing --cov-fail-under=100"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unreachable = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
